# spellbook

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  1  2  AGENTS.md  BUGBOT.md  CARDS.sql  CLA.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Pipfile  README.md  SECURITY.md  TODO.md  __init__.py  angstrom-base-trades-testing-fixed.sql  angstrom-base-trades-testing.sql  author.txt  chain_onboarding_process.md  chat.py  cleanup_candidates_20250610_163555.md  compound_view_borrow  compound_view_repay_borrow  dbt_models_seeds_names.txt  dbt_project.yml  docs_spark.index  drop_unused_models.sql  e  edit.py  explain_cls.py  faiss_store_spark.pkl  h origin -d bnb2 bnbB bnbuni brew chainflag chainflagPoly chainflageth cln contract dedup  h origin -d fixc fixnolimits ftm ftm-mim layer_1_btc_view layer_1_eth_view main matcha-fee  ingest.py  (+21 more)
.circleci/: config.yml  google.yml
.claude/: settings.local.json
.cursor/: README.md  mcp.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  protected-workflows.yml  pull_request_template.md
Move/: data.md
daily_spellbook/: dbt_project.yml  package-lock.yml
dbt_env/: pyvenv.cfg
dbt_subprojects/: README.md  TODO.md  accepted_file.txt  test_accepted.txt
deprecated-dune-v1-abstractions/: README.md
dex/: dbt_project.yml  package-lock.yml  packages.yml
docs/: deploy_lock.md
dune_utils/: dbt_project.yml
ethereum/: CryptoPunks_Attributes.sql
git_scripts/: fetch_latest_manifest.py  open_internal_pr.sh
hourly_spellbook/: dbt_project.yml
labels/: README.md
(+29648 files in other folders)
