[project]
name = "spellbook"
version = "0.0.0"
requires-python = "==3.13.*"
dependencies = [
    "dbt-trino>=1.10.1,<1.11",
    "jinja2>=3.1.6",
    "pre-commit==4.0.1",
    "pytest>=9.0.3",
    "requests>=2.33.0",
]

[tool.uv]
exclude-newer = "3 days"
no-build = true
# daff 1.3.46 publishes no wheel (sdist-only on all platforms); allow its build
no-build-package = { daff = false }
package = false
